apps/templates/old-cariereinit-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cariereinit-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: apps-https-redirect@kubernetescrd
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-cariereinit
    hosts:
      - "cariereinit.societateahermes.ro"
      - "cariereinit.societatea-hermes.ro"
      - "cariereinit.ro"
  rules:
  - host: "cariereinit.societatea-hermes.ro"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: old-cariereinit-website
              port:
                number: 8000
  - host: "cariereinit.societateahermes.ro"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: old-cariereinit-website
              port:
                number: 8000
  - host: "cariereinit.ro"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: old-cariereinit-website
              port:
                number: 8000
